--- a/app/assets/stylesheets/form/new.css
+++ b/app/assets/stylesheets/form/new.css
@@ -5,6 +5,25 @@
   align-items: center;
 } */
 
+html{
+  display: block;
+  padding: 0;
+  border: 0;
+  margin: 0;
+  outline: 0;
+  background-image: url("yoga-for-runners-girl-sunset-stock.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+body{
+  padding: 0;
+  border: 0;
+  margin: 0;
+}
+
 .login-form-container {
   display: flex;
   flex-direction: column;
@@ -29,13 +48,20 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 15px 0 15px 3px;
+  padding: 15px 0 15px 10px;
   margin: 5px 0 5px 0;
+  font-size: 12
 }
 
 .login-input:focus {
   background-color: white;
   color: black;
+  border: 2px solid;
+  border-color: #c78253;
+  border-radius: 2px;
+  outline: none;
+  box-shadow: 0px 0px 5px 1px #daeaff;
+  cursor: text;
 }
 /*
 .login-signup{
@@ -51,18 +77,6 @@
   padding: 0 50px 0 50px;
 }
 
-html{
-  display: block;
-  padding: 0;
-  border: 0;
-  margin: 0;
-  outline: 0;
-  background-image: url("yoga-for-runners-girl-sunset-stock.jpg");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 
 .login-title {
   border-radius: 3px 3px 0 0;
@@ -80,8 +94,48 @@ html{
 .main-header {
   /* background: #ffffff; */
   background: white;
-  color: #f00;
   width: 100%;
   margin: 0;
+  border: 0;
+  padding: 10px 0px 10px 0px;
+  /* justify-content: center; */
+  /* align-items: center; */
+  justify-content: space-around;
   /* border-bottom: 1px solid #ccc; */
+}
+
+.header-items {
+  margin: 0 200px 0 200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.session-submit {
+  background-color: #ed4b30;
+  color: white;
+  border: 0;
+  width: 300px;
+  margin: 20px 0 0 0;
+  padding: 10px 0 10px 0;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.stride-title{
+  border: 0;
+  margin: 0;
+  padding: 0;
+  color: #f00;
+  font-size: 30px;
+  /* font-weight: 400px; */
+  /* font-weight: bold; */
+  font-weight: bolder;
+  font-family: 'Anton', sans-serif;
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+  color: red;
 }
