Complete first draft auth/login/signup

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -47,6 +47,7 @@
 }
 
 .summary-avatar{
+  text-decoration: none;
   position: relative;
   top: -65px;
   z-index: 1;
@@ -64,6 +65,7 @@
 }
 
 .dashboard-username {
+  text-decoration: none;
   font-weight: 300;
   font-size: 22px;
   display: flex;
@@ -73,4 +75,8 @@
   width: 100%;
   height: 60px;
   border-bottom: 1px solid #e6e6ea;
+}
+
+.dashboard-username:hover{
+  color: blue;
 }
