--- a/app/assets/stylesheets/form/new.css
+++ b/app/assets/stylesheets/form/new.css
@@ -33,7 +33,7 @@ body{
 }
 
 .bg{
-  background-image: url("yoga-for-runners-girl-sunset-stock.jpg");
+  background-image: url("runner.jpg");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -87,6 +87,7 @@ body{
 } */
 
 .signup-button {
+  background: white;
   text-decoration: none;
   color: #7f6974;
   font-size: 14px;
@@ -98,6 +99,75 @@ body{
   width: 82px;
   border-radius: 3px;
   margin-left: 40px;
+  cursor: pointer;
+  font-weight: 500;
+}
+
+.signup-button:hover {
+  background-color: #f5f5fa;
+  color: black;
+}
+
+.signup-form-container{
+  background-color: white;
+  width: 396px;
+  height: 415px;
+  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-top: 60px;
+  padding-left: 34px;
+}
+
+.signup-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.signup-title{
+  font-size: 32px;
+  font-weight: bold;
+  padding-bottom: 15px;
+}
+
+.signup-username, .signup-new-password{
+  padding-bottom: 10px;
+  font-weight: 400;
+}
+
+.signup-input{
+  border: 0;
+  outline: 1px solid #666666;
+  width: 350px;
+  height: 30px;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 3px;
+}
+
+.signup-form{
+  display: flex;
+  align-items: flex-start;
+}
+
+.signup-submit {
+  background-color: #ed4b30;
+  color: white;
+  border: 0;
+  width: 117px;
+  height: 44px;
+  padding: 10px 0 10px 0;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.signup-submit-holder{
+  width: 370px;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .login-form-box {
@@ -158,7 +228,8 @@ body{
   cursor: pointer;
 }
 
-.footer-stride-title, .home-stride-title, .login-stride-title, .dashboard-stride-title{
+
+.athlete-stride-title, .footer-stride-title, .home-stride-title, .login-stride-title, .dashboard-stride-title{
   border: 0;
   margin: 0;
   padding: 0;
@@ -293,4 +364,21 @@ body{
 
 .footer-sign-up-element:hover, .footer-log-in-element:hover{
   text-decoration: underline;
+}
+
+.modal-background {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 10;
+}
+
+.modal-child {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
