Buggy undo button

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,10 @@
  /* html {
    background: grey;
  } */
+
+ .map {
+   width: 100%;
+   height: 800px;
+   float: left;
+   position: relative;
+ }
