--- a/app/assets/stylesheets/form/new.scss
+++ b/app/assets/stylesheets/form/new.scss
@@ -312,6 +312,20 @@ body{
   border-radius: 3px;
 }
 
+.home-demo-login{
+  margin-top: 25px;
+  cursor: pointer;
+}
+
+.demo-login-button{
+  border: none;
+  width: 390px;
+  height: 48px;
+  background-color: #3b5997;
+  color: white;
+  cursor: pointer;
+}
+
 .footer-stride-title{
   color: white;
 }
