First draft map save

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <title>Stride</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=drawing,places&key=AIzaSyA4rAT0fdTZLNkJ5o0uaAwZ89vVPQpr_Kc"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=drawing,geometry,places&key=AIzaSyA4rAT0fdTZLNkJ5o0uaAwZ89vVPQpr_Kc"></script>
 
 
 
