--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,9 +18,9 @@
    background: grey;
  } */
 
- .map {
+ /* .map {
    width: 100%;
    height: 800px;
    float: left;
    position: relative;
- }
+ } */
