--- a/app/assets/stylesheets/map_create.css
+++ b/app/assets/stylesheets/map_create.css
@@ -72,6 +72,7 @@
   align-items: center;
   justify-content: center;
   padding-left: 20px;
+  padding-right: 20px;
   font-size: 20px;
   margin: 0;
   border: 0;
@@ -119,12 +120,21 @@
   height: 44px;
   width: 63px;
   border: none;
-  background-color: #fe9366;
+  background-color: #ed4b30;
   color: white;
+
+}
+
+.new-route-button:hover{
+  transition: 0.3s;
+  background-color: #e43114;
 }
 
 .map-footer{
   position: absolute;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   width: 92%;
   height: 50px;
   margin-left: 4%;
@@ -136,8 +146,34 @@
   box-shadow: 0px 8px 20px -4px rgba(209,209,209,1);
 }
 
-.distance {
+/* .distance {
   position: relative;
   z-index: 1;
   bottom: 20px;
+} */
+
+.distance-group > p, .distance-container > p {
+  margin: 0;
+}
+
+.distance-container > p {
+  font-size: 12px;
+}
+
+.miles {
+  padding-left: 5px;
+}
+
+.distance-container {
+  font-weight: 300;
+  color: #333333;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.distance-group{
+  font-size: 24px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
