--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -19,6 +19,7 @@
 .summary-column{
   display: flex;
   justify: center;
+  /* position: fixed; */
 }
 
 .dashboard-body {
@@ -80,6 +81,7 @@
 
 .activities-feed {
   margin-top: 75px;
+  display: flex
 }
 
 .activities-list {
@@ -137,6 +139,14 @@
   flex-direction: column;
 }
 
+.dashboard-activity-content{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #e6e6ea;
+  width: 542px;
+}
+
 .dashboard-activity-title{
   text-decoration: none;
   color: black;
@@ -153,14 +163,35 @@
 .dashboard-workout-data{
   display: flex;
   flex-direction: row;
+  /* margin-bottom: 20px; */
+  /* border-bottom: 1px solid #e6e6ea; */
 }
 
-.dashboard-distance{
+.dashboard-datum:first-of-type{
+  padding-left: 0;
+}
+
+.dashboard-datum{
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  width: 90px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-right: 1px solid #e6e6ea;
+
 }
 
-.dashboard-distance-render{
-  display: flex;
-  flex-direction: row;
+.dashboard-datum:last-of-type{
+  border-right: 0;
+  width: 110px;
+}
+
+.dashboard-datum-label{
+  font-size: 12px;
+  color: #848382;
+}
+
+.dashboard-datum-value{
+  font-size: 20px;
 }
