--- a/app/assets/stylesheets/map_create.css
+++ b/app/assets/stylesheets/map_create.css
@@ -51,6 +51,7 @@
   align-items: center;
   justify-content: space-between;
   z-index: 1;
+  box-shadow: 0px 8px 20px -4px rgba(209,209,209,1);
 }
 
 .left-sub-header {
