--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -1,3 +1,7 @@
+.dashboard {
+  height: 100%;
+}
+
 .dashboard-stride-title {
   margin-left: 8%;
 }
@@ -28,7 +32,7 @@
   display: flex;
   flex-direction: row;
   background-color: #f5f5fa;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .dashboard-profile-summary{
