--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -76,6 +76,7 @@
   /* align-items: flex-start; */
   top: -50px;
   width: 100%;
+  color: black;
   /* height: px; */
   /* border-bottom: 1px solid #e6e6ea; */
 }
