--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -133,6 +133,7 @@ li:hover .dashboard-list, li:hover .training-list{
   list-style: none;
   display: flex;
   align-items: center;
+  height: 100%;
 }
 
 .header-avatar-container{
