--- a/app/assets/stylesheets/map_create.css
+++ b/app/assets/stylesheets/map_create.css
@@ -11,12 +11,13 @@
 
 .map {
   width: 100%;
-  height: 800px;
+  height: 900px;
   float: left;
-  position: relative;
+  /* position: relative; */
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 0;
 }
 
 .left-map-header {
@@ -50,8 +51,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  z-index: 1;
-  box-shadow: 0px 8px 20px -4px rgba(209,209,209,1);
+  z-index: 3;
+  border-bottom: 1px solid #ccc;
+/* box-shadow: 0px 8px 20px -4px rgba(209,209,209,1); */
 }
 
 .left-sub-header {
@@ -141,7 +143,7 @@
   margin-left: 4%;
   margin-right: 4%;
   bottom: 10%;
-  z-index: 1;
+  z-index: 0.5;
   background-color: rgb(241,241,241);
   border-radius: 3px;
   box-shadow: 0px 8px 20px -4px rgba(209,209,209,1);
