--- a/app/assets/stylesheets/save_map.css
+++ b/app/assets/stylesheets/save_map.css
@@ -25,29 +25,50 @@
 
 .route-save-label {
   padding-top: 20px;
-  font-size: 14px;
+  font-size: 12px;
+  color: #99999b;
+  margin-bottom: 10px;
 }
 
 .save-input{
   border: 1px solid #ccc;
   height: 24px;
   width: 275px;
+  padding-left: 10px;
 }
 
-.route-save-submit {
+.route-save-submit, .cancel-route {
   background-color: #2d2c32;
   width: 63px;
   height: 40px;
   border: 0;
   color: white;
+  margin-right: 5px;
+}
+
+.cancel-route{
+  color: black;
+  background-color: white;
+  border: 1px solid #ccc;
 }
 
 .signup-submit-holder {
   display: flex;
+  /* position: relative; */
+  height: 55%;
+  width: 100%;
   align-items: flex-end;
+  justify-content: flex-end;
 }
 
 .route-save-submit:hover {
   transition: 0.3s;
   background-color: #4a4852;
+}
+
+.save-description {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  border: 1px solid #ccc;
 }
