--- a/app/assets/stylesheets/activity_create.css
+++ b/app/assets/stylesheets/activity_create.css
@@ -199,3 +199,26 @@
 .action-cancel:hover{
   text-decoration: underline;
 }
+
+.datetime {
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+}
+
+.datetime > input:first-of-type {
+  border: 1px solid #ccccd1;
+  border-right: 0;
+  border-radius: 3px 0 0 3px;
+  height: 36px;
+  width: 127px;
+  font-size: 12px;
+}
+
+.datetime > input:last-of-type {
+  border: 1px solid #ccccd1;
+  border-radius: 0 3px 3px 0;
+  height: 36px;
+  width: 111px;
+  padding-left: 0;
+}
