--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <%= favicon_link_tag asset_path('stravicon.ico'), :rel => 'icon', :type => "image/x-icon" %>
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <title>Stride</title>
     <%= csrf_meta_tags %>
